force-app/main/default/objects/numm__FARule__c/numm__FARule__c.object-meta.xml
<CustomObject>
    <description>Tables des durées d&#39;amortissements</description>
    <label>Durée</label>
    <nameField>
        <label>Règle / Durée</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Durées</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>