force-app/main/default/objects/numm__FARule__c/fields/numm__Coef__c.field-meta.xml
<CustomField>
    <fullName>numm__Coef__c</fullName>
    <inlineHelpText>Coefficients depuis 2010 :
2 à 4 ans : 1,25
5 à 6 ans : 1,75
plus de 6 ans : 2,25</inlineHelpText>
    <label>Coefficient</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>