force-app/main/default/objects/numm__FARule__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>