force-app/main/default/objects/numm__FARule__c/fields/numm__Locked__c.field-meta.xml
<CustomField>
    <fullName>numm__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloquée</label>
    <type>Checkbox</type>
</CustomField>