force-app/main/default/objects/numm__FARule__c/fields/numm__Mois__c.field-meta.xml
<CustomField>
    <fullName>numm__Mois__c</fullName>
    <label>Durée (en mois)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>