force-app/main/default/objects/numm__FARule__c/fields/numm__RateAccelerated__c.field-meta.xml
<CustomField>
    <fullName>numm__RateAccelerated__c</fullName>
    <formula>(100 /  (numm__Mois__c /12)) * numm__Coef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux Dégressif</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>