force-app/main/default/objects/numm__FARule__c/fields/numm__RateStraightLine__c.field-meta.xml
<CustomField>
    <fullName>numm__RateStraightLine__c</fullName>
    <formula>100/(numm__Mois__c/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux Linéaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>