force-app/main/default/objects/numm__FARule__c/validationRules/numm__CoefMin.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CoefMin</fullName>
    <active>true</active>
    <description>Le coefficient doit être &gt;=1</description>
    <errorConditionFormula>numm__Coef__c &lt;1</errorConditionFormula>
    <errorMessage>Le coefficient doit être supérieur ou égal à 1.</errorMessage>
</ValidationRule>