force-app/main/default/objects/numm__FARule__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>numm__Description__c</columns>
    <columns>numm__Mois__c</columns>
    <columns>numm__RateStraightLine__c</columns>
    <columns>numm__Coef__c</columns>
    <columns>numm__RateAccelerated__c</columns>
    <columns>numm__Locked__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>